<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <TextView
        android:id="@+id/no_player_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/player_name"
        android:textSize="20sp"
        android:textColor="@android:color/black"/>

    <TextView
        android:id="@+id/no_player_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/no_player_title"
        android:text="@string/player_name_message"
        android:textColor="@android:color/black" />
    <EditText
        android:id="@+id/player_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/no_player_message"
        android:hint="@string/player_name"
        android:background="@android:drawable/edit_text"/>

    <Button
        android:id="@+id/player_name_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/no_player_message"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:text="@string/save"/>

</RelativeLayout>